updated HTML and CSS files for more dynamic viewing of title portion

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
             <a href="#skillsID">Skills</a>
             <a href="#projectsID">Projects</a>
         </div>
+
         <div class="title">
             <div class="title_heading">
                 <h1 class="portfolio_text">Portfolio</h1>
-                <img src="my_icon.png" class="person_icon">
+                <div class="icon_container">
+                    <img src="my_icon.png" class="person_icon">
+                    <div class="rectangle_bar"></div>   
+                </div>
             </div> 
-            <div class="rectangle_bar"></div>   
         </div>
         <!--END NG TITLE SECTION-->
 
